removed overlap  bugs from product card

--- a/app/assets/stylesheets/pages/cards.scss
+++ b/app/assets/stylesheets/pages/cards.scss
@@ -8,7 +8,7 @@
 .each-card {
   width:100%;
   height: 100px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   text-align: center;
   display: flex;
   border-radius: 12px;
@@ -31,15 +31,15 @@
   text-decoration: none;
 }
 .btn-card{
-  margin-right: 12px;
+  margin-right: 27px;
   width: 95px;
+  height: 38px;
 }
 .name {
   width: 15rem;
   height: 53%;
 }
 .price {
-  padding-right: 50%;
   height: 36px;
 }
 
